<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_divination" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_alarm_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/baseline_shop_24"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_bug"
        android:icon="@drawable/baseline_bug_24"
        android:title="@string/title_bug" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_my" />

</menu>