<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/tarotMasterSelectionFragment">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sosotalot.ui.tarot.TarotMasterSelectionFragment"
        android:label="@string/title_divination"
        tools:layout="@layout/fragment_tarot_master_selection" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.sosotalot.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.sosotalot.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_bug"
        android:name="com.example.sosotalot.ui.Issue.IssueFragment"
        android:label="@string/title_bug"
        tools:layout="@layout/fragment_issue">
    </fragment>

    <fragment
    android:id="@+id/navigation_my"
    android:name="com.example.sosotalot.ui.profile.UserProfileFragment"
    android:label="@string/title_my"
    tools:layout="@layout/fragment_user_profile">
    </fragment>

    <!-- Tarot Master Selection Fragment -->
    <fragment
        android:id="@+id/tarotMasterSelectionFragment"
        android:name="com.example.sosotalot.ui.tarot.TarotMasterSelectionFragment"
        android:label="Select Tarot Master"
        tools:layout="@layout/fragment_tarot_master_selection">
        <action
            android:id="@+id/action_tarotMasterSelectionFragment_to_masterIntroFragment"
            app:destination="@id/masterIntroFragment" />
    </fragment>

    <fragment
        android:id="@+id/masterIntroFragment"
        android:name="com.example.sosotalot.ui.profile.MasterIntroFragment"
        android:label="Select Tarot Master"
        tools:layout="@layout/fragment_master_intro">
        <action
            android:id="@+id/action_masterIntroFragment_to_questionInputFragment"
            app:destination="@id/questionInputFragment" />
    </fragment>



    <!-- Question Input Fragment -->
    <fragment
        android:id="@+id/questionInputFragment"
        android:name="com.example.sosotalot.ui.tarot.QuestionInputFragment"
        android:label="Input Question"
        tools:layout="@layout/fragment_question_input">
        <action
            android:id="@+id/action_questionInputFragment_to_layoutSelectionFragment"
            app:destination="@id/layoutSelectionFragment"
            app:popUpTo="@id/questionInputFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <!-- Layout Selection Fragment -->
    <fragment
        android:id="@+id/layoutSelectionFragment"
        android:name="com.example.sosotalot.ui.tarot.LayoutSelectionFragment"
        android:label="Select Layout"
        tools:layout="@layout/fragment_layout_selection">
        <action
            android:id="@+id/action_layoutSelectionFragment_to_cardDrawingFragment"
            app:destination="@id/cardDrawingFragment"
            app:popUpTo="@id/layoutSelectionFragment"
            app:popUpToInclusive="true"/>

    </fragment>

    <!-- Card Drawing Fragment -->
    <fragment
        android:id="@+id/cardDrawingFragment"
        android:name="com.example.sosotalot.ui.tarot.CardDrawingFragment"
        android:label="Draw Cards"
        tools:layout="@layout/fragment_card_drawing">
        <action
            android:id="@+id/action_cardDrawingFragment_to_tarotMasterSelectionFragment"
            app:destination="@id/tarotMasterSelectionFragment" />
        <action
            android:id="@+id/action_cardDrawingFragment_to_tarotResultFragment"
            app:destination="@id/tarotResultFragment" />
    </fragment>



    <fragment
        android:id="@+id/tarotResultFragment"
        android:name="com.example.sosotalot.ui.tarot.TarotResultFragment"
        android:label="Tarot Result"
        tools:layout="@layout/fragment_tarot_result" />


</navigation>